--- a/exer2.html
+++ b/exer2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paragrafos</title>
+    <link rel="stylesheet" href="style.css">
     <!--<link rel="shortcut icon" href="" type="image/x-icon"> insere um favicon-->
 </head>
 <body>
