--- a/exer3.html
+++ b/exer3.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>utilizando links externos</h1>
-    <p>voce pode acessar o meu github <a href="https://github.com/pedrootrevisan"></a></p>
+    <p>voce pode acessar o meu  <a href="https://github.com/pedrootrevisan" target="_blank" rel="extenal"> github</a></p>
     <!--target = "blank rel = "extenal"-->
+    <h2>Essa é a primeira pagina, vc pode acessar a <a href="exer2.html" rel="next">segunda pagina</a></h2>
 </body>
 </html>
