--- a/Desafio3/psFinal.html
+++ b/Desafio3/psFinal.html
@@ -67,16 +67,16 @@
             <h1>Contatos</h1>
         </div>
         <div id="Icons">
-            <a href="#" class="link" id="instagram">
+            <a href="https://www.instagram.com/pedro.otrevisan" target="_blank" class="link" id="instagram">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="#" class="link" id="whatsapp">
+            <a href="https://wa.me/5534999362207" target="_blank" class="link" id="whatsapp">
                 <i class="fa-brands fa-whatsapp"></i>
             </a>
-            <a href="#" class="link" id="email">
+            <a href="mailto:pedrotolive8@gmail.com" target="_blank" class="link" id="email">
                 <i class="fa-regular fa-envelope"></i>
             </a>
-            <a href="#" class="link" id="github">
+            <a href="https://github.com/pedrootrevisan" target="_blank" class="link" id="github">
                 <i class="fa-brands fa-github"></i>
             </a>
         </div>
